# Agent_Oracle

./: .gitignore  LICENSE  PROJECT_STRUCTURE.md  README.md  main.py  oracle_server.py  pyproject.toml  test_checklist.py  test_fixes.py  test_memory_fix.py  test_simplified_chat.py
backend/: .env.example  conftest.py  main.py
backend/config/: README.md  __init__.py  compatibility.py  database.py  feature_flags.json  langchain_config.py  system_instructions.py
backend/exceptions/: __init__.py  base_exceptions.py  langchain_exceptions.py
backend/models/: __init__.py  chat_models.py  error_models.py  session_models.py
backend/scripts/: manage_db.py  manage_instructions.py
backend/services/: __init__.py  chat_service.py  client_factory.py  context_optimizer.py  feature_flags.py  gemini_client.py  langchain_chat_session.py  langchain_client.py  langchain_dashboard.py  langchain_monitoring.py  langchain_performance_monitor.py  memory_fallback.py  memory_manager.py  session_chat_service.py  session_service.py
backend/templates/: langchain_dashboard.html
backend/tests/: test_context_optimization.py  test_e2e_integration.py  test_gemini_client_session_management.py  (+16 more)
docs/: API_DOCUMENTATION.md  ARCHITECTURE_CHANGES.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  EMERGENCY_PROCEDURES.md  LANGCHAIN_MIGRATION_GUIDE.md  LANGCHAIN_MONITORING.md  LANGCHAIN_TROUBLESHOOTING.md  MONITORING_GUIDE.md  OPTIMIZATION_SUMMARY.md  TROUBLESHOOTING.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
oracle/: agent_loop.py  cli.py  config.py  server.py
scripts/: README.md  dev-setup.sh
(+58 files in other folders)
