[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oracle"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.4.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "click>=8.1.7",
    "httpx>=0.27.0",
    "PyYAML>=6.0",
    "mcp>=1.0.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
memory = ["mempalace>=0.1.0"]

[project.scripts]
oracle = "oracle.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["oracle*"]

[tool.setuptools.package-data]
oracle = ["ui/static/*"]
